--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"dependencies": {
 		"express": "^4.17.1",
 		"nodemailer": "^0.6.1",
-		"jade": "^0.27.6"
+		"jade": "^0.27.6",
+		"kafkajs": "^2.0.2"
 	}
 }
